@@ -1,6 +1,20 @@
 2013-12-03  Manjunath Matti  <mmatti@caviumnetworks.com>
 
 	Backported:
+	
+	2013-11-26  Yufeng  <yufeng.zhang@arm.com>
+
+	gcc/
+        * config/arm/arm.c (arm_legitimize_address): Check xop1 is not
+        a constant immediate before force_reg.
+	
+	gcc/testsuite/
+	* gcc.target/arm/20131120.c: New test.
+
+	
+2013-12-03  Manjunath Matti  <mmatti@caviumnetworks.com>
+
+	Backported:
 	2013-11-26  Terry Guo  <terry.guo@arm.com>
 
 	gcc/
